Alignment fixes + Message fixes.

--- a/src/styles/partials/about.scss
+++ b/src/styles/partials/about.scss
@@ -17,6 +17,7 @@
 		}
 
 		&-left{
+			padding: 1rem 0 !important;
 			.heading{
 				color: $black;
 				font-size: 2rem;
@@ -127,17 +128,29 @@
 
 		&-finalmessage{
 			padding: 1.75rem 0.75rem;
-			width: 100%;
+			max-width: 85%;
 			text-align: center;
+			// text-justify: ;
 			text-transform: uppercase;
 			font-size: 1.275rem;
 			letter-spacing: 2.3%;
 			font-weight: 500;
 			line-height: 2;
 
+			.quotes{
+				font-size: 1.375rem;
+				margin: 0 0.25rem;
+			}
+
 			@media only screen and (max-width: 768px){
 				font-size: 0.925rem;
-				line-height: 1.618;
+
+				.quotes{
+					font-size: 1.125rem;
+					margin: 0 0.125rem;
+				}
+
+				// line-height: 1.618;
 				font-weight: 600;
 			}
 
