--- a/src/styles/partials/app.scss
+++ b/src/styles/partials/app.scss
@@ -26,8 +26,8 @@ body {
 }
 
 .resimage {
-	max-width: 96.5%;
-	max-height: 96.5%;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 /*
@@ -64,6 +64,10 @@ Absolute images for the cute ones.
 	&.plantimage {
 		bottom: 0;
 		top: auto;
+
+		@media only screen and (max-width: 576px){
+			bottom: 1.65rem;
+		}
 	}
 }
 
