--- a/src/styles/partials/contact.scss
+++ b/src/styles/partials/contact.scss
@@ -102,6 +102,7 @@
 
 		&-container{
 			position: relative;
+			overflow: hidden;
 
 			.fixedcontainer{
 				padding: 1rem;
