--- a/src/styles/partials/home.scss
+++ b/src/styles/partials/home.scss
@@ -17,7 +17,7 @@
 		}
 
 		.introleft{
-			padding: 1rem 0;
+			padding: 1.5rem 0 1rem 0;
 			.heading{
 				color: $black;
 				font-size: 2rem;
